# libmypaint

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README  README.md  SConscript  SConstruct  VERSIONING.md  acinclude.m4  appveyor.bat  appveyor.yml  appveyor_build.sh  autogen.sh  brushmodes.c  brushmodes.h  brushsettings-gen.h  brushsettings.json  brushsettings.py  configure.ac  fifo.c  fifo.h  generate.py  helpers.c  helpers.h  libmypaint.c  libmypaint.pc.in  meson.build  meson_options.txt  mypaint-brush-settings-gen.h  mypaint-brush-settings.c  mypaint-brush-settings.h  mypaint-brush.c  mypaint-brush.h  mypaint-config.h  mypaint-config.h.bottom  mypaint-config.h.top  mypaint-fixed-tiled-surface.c  mypaint-fixed-tiled-surface.h  (+23 more)
.github/workflows/: test.yaml
RGB/: ILLSS.m  generate.sh
build-aux/: fix-po-location.py
burns_subtractive_mode/: RGB.m  Readme.md  generate.sh
doc/: .gitignore  Doxyfile  Doxyfile.in  Makefile.am  SConscript  meson.build
doc/scripts/: dab_hardness_plot.py
doc/source/: conf.py  conf.py.in  meson.build
examples/: CMakeLists.txt  gegl.py  libmypaint.c  minimal.c  write_ppm.c  write_ppm.h
gegl/: Makefile.am  libmypaint-gegl.pc.in  meson.build  mypaint-gegl-surface.c  mypaint-gegl-surface.h
glib/: Makefile.am  mypaint-brush.c  mypaint-brush.h  mypaint-gegl-glib.c  mypaint-gegl-glib.h
include/: mypaint-fixed-tiled-surface.h  mypaint-rectangle.h  mypaint-tiled-surface.h  tiled-surface-private.h
m4macros/: Makefile.am  introspection.m4
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.meson  README.md  SConscript  af.po  ar.po  ar_AR.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  bs_Latn.po  ca.po  ca@valencia.po  cs.po  csb.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  es_ES.po  et.po  eu.po  fa.po  fi.po  fr.po  fy.po  ga.po  gl.po  gu.po  (+59 more)
src/: brushmodes.c  fifo.c  mypaint-surface.c  mypaint-tiled-surface.c  tilemap.c
tests/: CMakeLists.txt  Makefile.am  SConscript  ctests.py  meson.build  mypaint-benchmark.c  mypaint-benchmark.h  mypaint-test-surface.c  mypaint-test-surface.h  mypaint-utils-stroke-player.c  mypaint-utils-stroke-player.h  test-brush-load.c  test-brush-persistence.c  test-details.c  test-fixed-tiled-surface.c  test_ctests.py
tests/brushes/bad/: bad_setting_types_1.myb  bad_setting_types_2.myb  bad_setting_types_3.myb  bad_setting_types_4.myb  entirely_unknown_settings.bad-myb  missing_settings.bad-myb  missing_version.bad-myb  some_unknown_inputs.myb  some_unknown_settings.myb  truncated.bad-myb
tests/gegl/: Makefile.am  meson.build  test-gegl-surface.c
